# syspro-cpp

./: .clangd  .gitignore  LICENSE
nstt1/: hashset.hpp  meson.build  tests.cpp
nstt10/: limiter.hpp  meson.build  tests.cpp
nstt11/: justfile  meson.build  prime.hpp  tests.cpp
nstt2/: meson.build  plane.hpp  tests.cpp
nstt6/: matrix.hpp  tests.cpp
nstt7/: assembler.cabal  blrisc.md  emulator.cpp  emulator.hpp  encoding.dot  justfile  main.cpp  meson.build
nstt7/assembler/: Encoding.hs  Main.hs  Parsing.hs  Program.hs
nstt7/tests/: foo.asm  mem.asm
nstt8/: fileimpls.hpp  io.hpp  justfile  meson.build  stringimpls.hpp  tests.cpp
