cabal-version:      3.4
name:               assembler
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable assembler
    import:           warnings
    main-is:          Main.hs
    other-modules:    Program, Parsing, Encoding
    build-depends:    base, extra, mtl, vector,
                      megaparsec, containers,
                      binary, optparse-applicative,
                      filepath, bytestring
    hs-source-dirs:   assembler/
    default-language: Haskell2010
